--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/calculator.exe",
+            "program": "Miniproject/3_implementation/calculator.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -21,7 +21,7 @@
             "name": "gcc.exe - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}\\calculator.exe",
+            "program": "Miniproject/3_implementation/calculator.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
